[package]
name = "sequel"
version = "0.1.0"
authors = ["YoEight <yo.eight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.9"
futures = "0.3"
log = "0.4"
regex = "1"
async-trait = "0.1"
async-stream = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }